# ufs-weather-model

./: .gitmodules  CMakeLists.txt
.cicd/: Jenkinsfile  Jenkinsfile.combined
.cicd/scripts/: .shellcheckrc  create_baseline.sh  disk_usage.sh  post_test_results.sh  regression_test.sh  wm_build.sh  wm_init.sh  wm_test.sh
.github/: pull_request_template.md
ADCIRC-interface/: CMakeLists.txt  adcirc_files.cmake
ADCIRC-interface/cmake/: macros.cmake
CDEPS-interface/: cdeps_files.cmake
CMEPS-interface/: CMakeLists.txt
MOM6-interface/: mom6_files.cmake
NOAHMP-interface/: CMakeLists.txt  noahmp_files.cmake
cmake/: configure_apps.cmake
doc/UsersGuide/source/: BuildingAndRunning.rst  CAPE2020.rst  CodeOverview.rst  FAQ.rst  Glossary.rst  HSD.rst  HSDcontainer.rst  Introduction.rst  RTConfigurations.rst  baroclinic_wave.rst  conf.py  index.rst  references.bib
doc/UsersGuide/source/doc-snippets/: clone_hsd.rst  hsd_baseline_config.rst  hsd_check_results.rst  hsd_data.rst  hsd_machine_config.rst  hsd_notes.rst  hsd_run_multiple.rst  hsd_run_tests.rst
driver/: UFSDriver.F90
modulefiles/: ufs_cheyenne.intel.lua  ufs_gaea.intel.lua  ufs_gaea.intelllvm.lua  ufs_gaeac5.intel.lua  ufs_gaeac5.intelllvm.lua  ufs_gaeac6.intelllvm.lua  ufs_local.gnu  ufs_local.gnu.lua
tests/: bl_date.conf  compile.sh  default_vars.sh  module-setup.sh  rt.conf  rt.sh  rt_coastal.conf  rt_utils.sh  run_compile.sh  run_test.sh  test_changes.list
tests-dev/: baseline_setup.yaml  create_log.py  create_xml.py  ufs_test.yaml  ufs_test_utils.py  ufs_test_utils.sh
tests-dev/machine_config/: machine_derecho.config
tests-dev/test_cases/exp_conf/: 2020_CAPE.IN  baroclinic_wave.IN
tests-dev/test_cases/parm/: baroclinic_wave.nml.IN
tests-dev/test_cases/tests/: 2020_CAPE  baroclinic_wave
tests-dev/test_cases/utils/: README.txt  plot_bcw.sh  plot_cape.sh
tests/fv3_conf/: coastal_adcirc_run.IN  coastal_datm_atmmesh.IN  compile_qsub.IN_local  compile_slurm.IN_local  control_run.IN  cpld_datm_cdeps.IN  cpld_datm_cdeps_gfs.IN  fv3_qsub.IN_local  fv3_qsub.IN_wcoss2  fv3_slurm.IN_gaeac6  fv3_slurm.IN_hercules  fv3_slurm.IN_local  noahmp_run.IN
tests/parm/: datm.streams.IN  fd_nems.yaml  fd_ufs.yaml  global_control.nml.IN  global_control_lnd_iau.nml.IN  ice_in.IN  model_configure.IN  nems.configure.coastal_datm_ocn.IN  ufs.configure.atm.IN  ufs.configure.atm_lm4.IN  ufs.configure.atm_lnd.IN  ufs.configure.atmaero.IN  ufs.configure.atmaq.IN  ufs.configure.atmw.IN  ufs.configure.blocked_atm_wav.IN  ufs.configure.blocked_atm_wav_2way.IN  ufs.configure.cpld_atm_fbh.IN  ufs.configure.datm_cdeps.IN  ufs.configure.hafs_atm.IN  ufs.configure.hafs_atm_docn.IN  ufs.configure.hafs_atm_ocn.IN  ufs.configure.hafs_atm_ocn_wav.IN  ufs.configure.hafs_atm_ocn_wav_inline.IN  ufs.configure.hafs_atm_ocn_wav_mom6.IN  ufs.configure.hafs_atm_wav.IN  ufs.configure.leapfrog_atm_wav.IN  ufs.configure.s2s.IN  ufs.configure.s2s_aoflux.IN  ufs.configure.s2sa.IN  ufs.configure.s2sw.IN  ufs.configure.s2sw_fast.IN  ufs.configure.s2swa.IN  ufs.configure.s2swa_fast.IN  ufs.configure.s2swal_fast.IN  ufs.configure.s2swal_fast_esmf.IN  ww3_shel.nml.IN
tests/tests/: atm_ds2s_docn_dice  atm_ds2s_docn_pcice  atmaero_control_p8  atmaero_control_p8_rad  atmaero_control_p8_rad_micro  coastal_florence_hsofs_atm2adc  control_2threads_p8  control_CubedSphereGrid  control_CubedSphereGrid_debug  control_CubedSphereGrid_parallel  control_c48_lnd_iau  control_debug_p8  control_decomp_p8  control_latlon  control_noqr_p8  control_p8  control_p8_atmlnd  control_p8_atmlnd_sbs  control_p8_lndp  control_p8_ugwpv1  control_restart_noqr_p8  control_restart_p8  control_restart_p8_atmlnd  control_wam  control_wrtGauss_netcdf_parallel  control_wrtGauss_netcdf_parallel_debug  conus13km_2threads  conus13km_debug_2threads  cpld_2threads_p8  cpld_bmark_p8  cpld_control_c192_p8  cpld_control_c48  cpld_control_ciceC_p8  cpld_control_gfsv17  cpld_control_gfsv17_iau  cpld_control_noaero_p8  cpld_control_noaero_p8_agrid  cpld_control_nowave_noaero_p8  cpld_control_p8  cpld_control_p8.v2.sfc  (+37 more)
